# inf3172-tp2

./: .gitignore  CMakeLists.txt  Makefile  README.md  fin.c  list.c  new.c  newdir.c  rmall.c  size.c  tsh.c  utils.h
